--- a/app/sass/components/inline-button.sass
+++ b/app/sass/components/inline-button.sass
@@ -5,11 +5,9 @@
   display: inline-flex
   align-items: center
   transition: 0.2s
+  color: $c-surfie-green
   &:hover
     opacity: 0.8
-  &--boston-blue,
-  &--boston-blue:focus
-    color: $c-boston-blue
   &__icon
     &:first-child
       margin-right: 5px
