--- a/app/sass/components/settings-education.sass
+++ b/app/sass/components/settings-education.sass
@@ -2,13 +2,7 @@
   padding: 60px 0
   &__wrap
     +row()
-  &__col-1
-    +col(3)
-  &__col-2
-    +col(3)
-  &__col-3
-    +col(3)
-  &__col-4
+  &__col
     +col(3)
   &__line
     &:not(:last-child)
