--- a/app/sass/components/settings-general.sass
+++ b/app/sass/components/settings-general.sass
@@ -1,5 +1,5 @@
 .settings-general
-  padding: 60px 15px
+  padding: 60px 0
   &__wrap
     +row()
   &__avatar
@@ -17,7 +17,7 @@
     &-date
       margin-bottom: 5px
   &__list
-    +col(3)
+    +col(4)
   &__heading
     padding-bottom: 20px
     margin-bottom: 20px
