--- a/app/pug/pages/settings-page/general/_index.pug
+++ b/app/pug/pages/settings-page/general/_index.pug
@@ -27,7 +27,7 @@ include /partials/link
   ]
 
 .settings-general
-  .settings-general__wrap
+  .settings-general__row
     //- Column
     .settings-general__avatar
       .settings-general__avatar-wrap
@@ -44,7 +44,7 @@ include /partials/link
       .settings-general__heading
         .row-group.row-group--align-center
           .row-group__item
-            h4 General information:
+            h5 General information:
           .row-group__item
             +inline-button({title:'Edit', link:'#', icon:{name:'pencil', width:'12', height:'12', fill:'surfie-green'}})
       .info-list
@@ -59,7 +59,7 @@ include /partials/link
       .settings-general__heading
         .row-group.row-group--align-center
           .row-group__item
-            h4 Bank information:
+            h5 Bank information:
           .row-group__item
             +inline-button({title:'Edit', link:'#', icon:{name:'pencil', width:'12', height:'12', fill:'surfie-green'}})
       .info-list
