--- a/app/pug/partials/password-change-modal.pug
+++ b/app/pug/partials/password-change-modal.pug
@@ -23,7 +23,7 @@ mixin password-change-modal(props = {})
             .form__line
               .password-change-modal__buttons
                 .button-group.button-group--column
-                  +button({classes:'button-group__button'})(type="submit" data-modal-open="password-change-success-modal")| Confirm new password
+                  +button({classes:'button-group__button'})(type="button" data-modal-open="password-change-success-modal")| Confirm new password
                   +button({bg:'transparent', classes:'button-group__button'})(type="button" data-modal-close="password-change-modal")| Cancel
         if(type==='recover')
           form.form
@@ -32,5 +32,5 @@ mixin password-change-modal(props = {})
             .form__line
               .password-change-modal__buttons
                 .button-group.button-group--column
-                  +button({classes:'button-group__button'})(type="submit" data-modal-open="password-change-success-modal")| Send me rocovery link
+                  +button({classes:'button-group__button'})(type="button" data-modal-open="password-change-success-modal")| Send me rocovery link
                   +button({bg:'transparent', classes:'button-group__button'})(type="button" data-modal-close="password-change-modal")| Cancel
