--- a/app/pug/partials/skill.pug
+++ b/app/pug/partials/skill.pug
@@ -3,7 +3,7 @@ include /partials/close
 mixin skill(props = {})
   -const { title } = props
 
-  .slill
-    .slill__title #{title}
-    .slill__icon
-      +close({color:'brick-red', size:'10'})
+  .skill
+    .skill__title #{title}
+    .skill__icon
+      +close({color:'silver-chalice', size:'10'})
