--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -2,11 +2,11 @@
 $columns: 12
 $gutter : 30px
 // Fonts
-$base-font-size  : 16px
+$base-font-size  : 14px
 $base-font-family: 'Open Sans', sans-serif
 // Containers
 $cnt-xxl: 1440px
-$cnt-xl : 1140px
+$cnt-xl : 1200px
 $cnt-lg : 960px
 $cnt-md : 720px
 $cnt-sm : 540px
@@ -30,6 +30,7 @@ $c-silver-chalice : #9D9D9D
 $c-tundora        : #444444
 $c-mine-shaft     : #3D3D3D
 $c-surfie-green   : #0E7D7D
+$c-caribbean-green: #00D06C
 $c-boston-blue    : #3F88C5
 $c-cornflower-blue: #518EF8
 $c-brick-red      : #CC2936
