--- a/app/sass/components/svg-icon.sass
+++ b/app/sass/components/svg-icon.sass
@@ -6,6 +6,8 @@
     fill: $c-brick-red
   &--surfie-green
     fill: $c-surfie-green
+  &--caribbean-green
+    fill: $c-caribbean-green
   &--boston-blue
     fill: $c-boston-blue
   &--silver-chalice
