--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -45,7 +45,7 @@
 @import ./components/dropdown
 @import ./components/table
 @import ./components/tabs
-@import ./components/slill
+@import ./components/skill
 @import ./components/palette
 @import ./components/status-message
 @import ./components/inner-header
