--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -5,39 +5,32 @@ html, body
   text-align: left
   font-weight: 400
   color: $c-mine-shaft
-  +media-max($bp-xs)
-    font-size: 15px
 
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6
+  line-height: 1.2
+  font-weight: 700
 h1, .h1
   font-size: rem(40px)
-  line-height: 1.2
-  font-weight: 700
 h2, .h2
-  font-size: rem(35px)
-  line-height: 1.2
-  font-weight: 700
+  font-size: rem(30px)
 h3, .h3
-  font-size: rem(22px)
-  line-height: 1.2
-  font-weight: 700
+  font-size: rem(20px)
 h4, .h4
   font-size: rem(18px)
-  line-height: 1.2
-  font-weight: 700
 h5, .h5
   font-size: rem(16px)
-  line-height: 1.2
-  font-weight: 600
-
-p, .p
-  font-size: rem(16px)
-  line-height: 1.4
-  font-weight: 400
-.p-sm
+h6, .h6
   font-size: rem(14px)
+
+p, .p, .p-sm, .p-xs
   line-height: 1.4
   font-weight: 400
-
+p, .p
+  font-size: rem(14px)
+.p-sm
+  font-size: rem(13px)
+.p-xs
+  font-size: rem(12px)
 
 // Colors
 .text-white
@@ -52,6 +45,8 @@ p, .p
   color: $c-boston-blue
 .text-silver-chalice
   color: $c-silver-chalice
+.text-caribbean-green
+  color: $c-caribbean-green
 
 // Font weights
 .font-regular
