--- a/app/sass/components/header.sass
+++ b/app/sass/components/header.sass
@@ -7,7 +7,7 @@
     display: flex
     max-width: $cnt-xxl
     margin: 0 auto
-    padding: 10px
+    padding: 10px 15px
     align-items: center
     justify-content: space-between
   &__left
