--- a/app/sass/components/settings-general.sass
+++ b/app/sass/components/settings-general.sass
@@ -1,12 +1,21 @@
 .settings-general
   padding: 60px 0
-  &__wrap
+  +media-max($bp-xxl)
+    padding: 60px 30px
+  +media-max($bp-sm)
+    padding: 60px 15px
+  &__row
     +row()
   &__avatar
-    +col(3)
+    +col(2, 1)
     display: flex
     flex-direction: column
     align-items: center
+    +media-max($bp-xxl)
+      +col(2, 0)
+    +media-max($bp-xl)
+      +col(12)
+      margin-bottom: 40px
     &-wrap
       position: relative
       margin-bottom: 20px
@@ -15,9 +24,18 @@
       right: 0
       bottom: 0
     &-date
+      text-align: center
       margin-bottom: 5px
   &__list
-    +col(4)
+    +col(3)
+    +media-max($bp-xxl)
+      +col(4)
+    +media-max($bp-xl)
+      +col(6)
+    +media-max($bp-md)
+      +col(12)
+      &:nth-child(2)
+        margin-bottom: 40px
   &__heading
     padding-bottom: 20px
     margin-bottom: 20px
