--- a/app/sass/components/skill.sass
+++ b/app/sass/components/skill.sass
@@ -1,10 +1,10 @@
-.slill
+.skill
   display: inline-flex
   align-items: center
-  padding: 13px 20px 14px
-  border: 1px solid $c-surfie-green
+  padding: 12px 15px
+  border: 1px solid $c-silver-chalice
   border-radius: $r-primary
-  font-size: rem(16px)
+  font-size: rem(14px)
   line-height: 1
   font-weight: 600
   color: $c-tundora
