header was returned to the settings page

--- a/app/pug/settings-page.pug
+++ b/app/pug/settings-page.pug
@@ -16,7 +16,7 @@ block variables
 block content
   .settings-page
     .settings-page__header
-      //- +header({navActive:'clients'})
+      +header({navActive:'clients'})
     .settings-page__wrap
       .container
         .settings-page__title
